# redirekt

./: .gitignore  Cargo.toml  docker-compose.yaml  sonar-project.properties
.github/workflows/: ci.yaml
migrations/: 20220715101622_create_links.down.sql  20220715101622_create_links.up.sql
src/: cli.rs  database.rs  error.rs  http.rs  main.rs  tracing.rs
src/http/: api.rs
